--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
-        android:name="com.suibari.skyposter.SkyPosterApp"
+        android:name="com.suibari.skyputter.SkyPutterApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -19,7 +19,7 @@
         android:theme="@style/Theme.SkyPoster"
         tools:targetApi="31">
         <activity
-            android:name="com.suibari.skyposter.MainActivity"
+            android:name="com.suibari.skyputter.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.SkyPoster">
