--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+/.idea/*
+!/.idea/misc.xml
+!/.idea/compiler.xml
+!/.idea/gradle.xml
 /.ides/*
 .DS_Store
 /build
